Edited for keras

--- a/PneumoniaDetection.ipynb
+++ b/PneumoniaDetection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d4eba436-b123-476b-85c1-55ce2bb08a35",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+    "import keras"
    ]
   },
   {
@@ -43,19 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "af24dd38-2e1b-422e-b4ea-102fef84e83e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Data Augmentation and Normalization\n",
-    "train_datagen = ImageDataGenerator(rescale = 1.0/255.0, \n",
+    "train_datagen = keras.preprocessing.image.ImageDataGenerator(rescale = 1.0/255.0, \n",
     "                                   rotation_range = 20, \n",
     "                                   zoom_range = 0.1, \n",
     "                                   horizontal_flip = True,\n",
     "                                   width_shift_range = 0.2,\n",
     "                                   height_shift_range = 0.2)\n",
-    "test_datagen = ImageDataGenerator(rescale = 1.0/255.0)"
+    "test_datagen = keras.preprocessing.image.ImageDataGenerator(rescale = 1.0/255.0)"
    ]
   },
   {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e2b14dc7-9365-49d2-9073-4759402ebfb3",
    "metadata": {},
    "outputs": [
@@ -198,28 +198,26 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.applications import ResNet50\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Dropout\n",
-    "from tensorflow.keras.optimizers import Adam\n",
     "#ResNet50 model\n",
-    "base_model = ResNet50(weights = 'imagenet', include_top = False, input_shape = (150, 150, 3))\n",
+    "base_model = keras.applications.ResNet50(weights='imagenet', include_top=False, input_shape=(150, 150, 3))\n",
     "\n",
     "#Freeze the weights of base model\n",
     "base_model.trainable = False\n",
     "\n",
     "#Add Top Layers\n",
-    "model = Sequential([\n",
+    "model = keras.Sequential([\n",
     "    base_model,\n",
-    "    Flatten(),\n",
-    "    Dropout(0.5),\n",
-    "    Dense(128, activation = 'relu'),\n",
-    "    Dense(1, activation = 'sigmoid') #For binary classification (sigmoid)\n",
+    "    keras.layers.Flatten(),\n",
+    "    keras.layers.Dropout(0.5),\n",
+    "    keras.layers.Dense(128, activation='relu'),\n",
+    "    keras.layers.Dense(1, activation='sigmoid')  # For binary classification (sigmoid)\n",
     "])\n",
     "\n",
     "#Compiling Model\n",
-    "model.compile(optimizer = Adam(learning_rate = 0.0001), loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
-    "model.summary()"
+    "model.compile(optimizer=keras.optimizers.Adam(learning_rate=0.0001), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "#Model Summary\n",
+    "model.summary()\n"
    ]
   },
   {
